--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "e2e": "playwright test"
   },
   "dependencies": {
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "suretype": "^3.2.1",
+    "valtio": "^1.10.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.31.0",
